[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4" 
anyhow = "1.0.57"
base64 = "0.13"
bytes = "1"
image = "0.24.1"
lazy_static = "1"
lru = "0.7.5"
percent-encoding = "2"
photon-rs = "0.3"
prost = "0.10.1"
reqwest = "0.11"
serde = {version = "1", features=["derive"]}
tokio = {version = "1", features=["full"]}
tower = {version = "0.4.12", features=["util", "timeout", "load-shed", "limit"]}
tower-http = {version = "0.3", features=["add-extension", "compression-br", "trace"]}
tracing = "0.1"
tracing-subscriber = "0.3.11"

[build-dependencies]
prost-build = "0.10.1"